# dist-process-demo

./: .travis.yml  CMakeLists.txt
common/: CMakeLists.txt  README.md  common.h  json_serializer.cpp  json_serializer.h  serializer.cpp  serializer.h  serializer_factory.cpp  serializer_factory.h  task.cpp  task.h  types.h
dispatcher/: CMakeLists.txt  source.cpp
workers/: CMakeLists.txt
workers/image_pro/: CMakeLists.txt  source.cpp
workers/vector_pro/: CMakeLists.txt
