cmake_minimum_required(VERSION 3.10)

add_subdirectory(type)
add_subdirectory(math)
add_subdirectory(algo)
add_subdirectory(color)
add_subdirectory(image)
add_subdirectory(canvas)
add_subdirectory(imageio)
add_subdirectory(effects)
if(UNIX)
    add_subdirectory(memfile)
    add_subdirectory(mw)
endif()
